--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="n_mero">Número</string>
     <string name="endere_o">Endereço</string>
     <string name="email">Email</string>
+    <string name="botaoAdd">Adicionar Contato</string>
 </resources>
